Return JSON Problem when vardef id not found (#484)
* correct variable name so the method intention is clear

* Refactor tests

* add json problem response

* ktlint

* update examples and open api spec

* remove commented out annotation
