# openapi/variable-definitions-internal.yml
@@ -102,8 +102,8 @@ paths:
                   value: |-
                     [
                         {
-                        "vardok_id": "25",
-                        "vardef_id": "A1699WWE"
+                        "vardok_id": 1607,
+                        "vardef_id": wypvb3wd
                     }
                     ]
       security:
@@ -127,7 +127,24 @@ paths:
         examples:
           Vardok id:
             value: "1607"
+          Vardef id:
+            value: wypvb3wd
+          Not found:
+            value: Xy9_7-Az
       responses:
+        "404":
+          description: Not found
+          content:
+            application/problem+json:
+              schema:
+                $ref: https://opensource.zalando.com/restful-api-guidelines/models/problem-1.0.1.yaml#/Problem
+              examples:
+                Not found:
+                  value:
+                    type: about:blank
+                    status: 404
+                    detail: Not found
+                    parameters: {}
         "200":
           description: OK response
           content:
@@ -178,6 +195,7 @@ paths:
                     - he04
                     contains_special_categories_of_personal_data: true
                     variable_status: DRAFT
+                    measurement_type: "01"
                     valid_from: 2003-01-01
                     external_reference_uri: https://www.ssb.no/a/metadata/conceptvariable/vardok/1919/nb
                     comment:
@@ -204,8 +222,7 @@ paths:
                     last_updated_at: 2024-06-11T08:15:19.038Z
                     last_updated_by: ano@ssb.no
                 Vardef id:
-                  value:
-                    vardok_id: "25"
+                  value: "1607"
       security:
       - labid_token: []
   /vardok-migration/{vardok-id}:
@@ -274,6 +291,7 @@ paths:
                     - he04
                     contains_special_categories_of_personal_data: true
                     variable_status: DRAFT
+                    measurement_type: "01"
                     valid_from: 2003-01-01
                     external_reference_uri: https://www.ssb.no/a/metadata/conceptvariable/vardok/1919/nb
                     comment:
@@ -414,7 +432,7 @@ paths:
                         "subject_fields": ["he04"],
                         "contains_special_categories_of_personal_data": true,
                         "variable_status": "DRAFT",
-                        "measurement_type": null,
+                        "measurement_type": "01",
                         "valid_from": "2003-01-01",
                         "valid_until": null,
                         "external_reference_uri": "https://www.ssb.no/a/metadata/conceptvariable/vardok/1919/nb",
@@ -467,7 +485,7 @@ paths:
                         "subject_fields": ["he04"],
                         "contains_special_categories_of_personal_data": true,
                         "variable_status": "DRAFT",
-                        "measurement_type": null,
+                        "measurement_type": "01",
                         "valid_from": "2003-01-01",
                         "valid_until": null,
                         "external_reference_uri": "https://www.ssb.no/a/metadata/conceptvariable/vardok/1919/nb",
@@ -524,7 +542,11 @@ paths:
                         ],
                         "contains_special_categories_of_personal_data": true,
                         "variable_status": "PUBLISHED_INTERNAL",
-                        "measurement_type": null,
+                        "measurement_type": {
+                            "reference_uri": "https://www.ssb.no/klass/klassifikasjoner/303",
+                            "code": "01",
+                            "title": "Andel"
+                        },
                         "valid_from": "2003-01-01",
                         "valid_until": null,
                         "external_reference_uri": "https://www.ssb.no/a/metadata/conceptvariable/vardok/1919/nb",
@@ -599,6 +621,7 @@ paths:
                   subject_fields:
                   - he04
                   contains_special_categories_of_personal_data: true
+                  measurement_type: "01"
                   valid_from: 2003-01-01
                   external_reference_uri: https://www.ssb.no/a/metadata/conceptvariable/vardok/1919/nb
                   comment:
@@ -665,6 +688,7 @@ paths:
                     - he04
                     contains_special_categories_of_personal_data: true
                     variable_status: DRAFT
+                    measurement_type: "01"
                     valid_from: 2003-01-01
                     external_reference_uri: https://www.ssb.no/a/metadata/conceptvariable/vardok/1919/nb
                     comment:
@@ -839,6 +863,7 @@ paths:
                     - he04
                     contains_special_categories_of_personal_data: true
                     variable_status: DRAFT
+                    measurement_type: "01"
                     valid_from: 2003-01-01
                     external_reference_uri: https://www.ssb.no/a/metadata/conceptvariable/vardok/1919/nb
                     comment:
@@ -905,6 +930,7 @@ paths:
                     - he04
                     contains_special_categories_of_personal_data: true
                     variable_status: DRAFT
+                    measurement_type: "01"
                     valid_from: 2003-01-01
                     external_reference_uri: https://www.ssb.no/a/metadata/conceptvariable/vardok/1919/nb
                     comment:
@@ -953,6 +979,10 @@ paths:
                       title: Innvandrere
                     contains_special_categories_of_personal_data: true
                     variable_status: PUBLISHED_INTERNAL
+                    measurement_type:
+                      reference_uri: https://www.ssb.no/klass/klassifikasjoner/303
+                      code: "01"
+                      title: Andel
                     valid_from: 2003-01-01
                     external_reference_uri: https://www.ssb.no/a/metadata/conceptvariable/vardok/1919/nb
                     comment: Fra og med 1.1.2003 ble definisjon endret til også å
@@ -1118,6 +1148,7 @@ paths:
                     - he04
                     contains_special_categories_of_personal_data: true
                     variable_status: DRAFT
+                    measurement_type: "01"
                     valid_from: 2003-01-01
                     external_reference_uri: https://www.ssb.no/a/metadata/conceptvariable/vardok/1919/nb
                     comment:
@@ -1257,7 +1288,7 @@ paths:
                         "subject_fields": ["he04"],
                         "contains_special_categories_of_personal_data": true,
                         "variable_status": "DRAFT",
-                        "measurement_type": null,
+                        "measurement_type": "01",
                         "valid_from": "2003-01-01",
                         "valid_until": null,
                         "external_reference_uri": "https://www.ssb.no/a/metadata/conceptvariable/vardok/1919/nb",
@@ -1373,6 +1404,7 @@ paths:
                   subject_fields:
                   - he04
                   contains_special_categories_of_personal_data: false
+                  measurement_type: "01"
                   valid_until: 2026-01-01
                   external_reference_uri: https://www.ssb.no/a/metadata/conceptvariable/vardok/1919/nb
                   comment:
@@ -1436,6 +1468,7 @@ paths:
                     - he04
                     contains_special_categories_of_personal_data: true
                     variable_status: PUBLISHED_INTERNAL
+                    measurement_type: "01"
                     valid_from: 2003-01-01
                     external_reference_uri: https://www.ssb.no/a/metadata/conceptvariable/vardok/1919/nb
                     comment:
@@ -1592,6 +1625,7 @@ paths:
                     - he04
                     contains_special_categories_of_personal_data: true
                     variable_status: DRAFT
+                    measurement_type: "01"
                     valid_from: 2003-01-01
                     external_reference_uri: https://www.ssb.no/a/metadata/conceptvariable/vardok/1919/nb
                     comment:
@@ -1683,7 +1717,7 @@ paths:
                         "subject_fields": ["he04"],
                         "contains_special_categories_of_personal_data": true,
                         "variable_status": "DRAFT",
-                        "measurement_type": null,
+                        "measurement_type": "01",
                         "valid_from": "2003-01-01",
                         "valid_until": null,
                         "external_reference_uri": "https://www.ssb.no/a/metadata/conceptvariable/vardok/1919/nb",
@@ -1770,6 +1804,7 @@ paths:
                   subject_fields:
                   - he04
                   contains_special_categories_of_personal_data: false
+                  measurement_type: "01"
                   valid_from: 2026-01-02
                   external_reference_uri: https://www.ssb.no/a/metadata/conceptvariable/vardok/1919/nb
                   comment:
@@ -1833,6 +1868,7 @@ paths:
                     - he04
                     contains_special_categories_of_personal_data: true
                     variable_status: DRAFT
+                    measurement_type: "01"
                     valid_from: 2003-01-01
                     external_reference_uri: https://www.ssb.no/a/metadata/conceptvariable/vardok/1919/nb
                     comment:
@@ -2155,7 +2191,7 @@ components:
         subject_fields:
         - he04
         contains_special_categories_of_personal_data: true
-        measurement_type: null
+        measurement_type: "01"
         valid_from: 2003-01-01
         external_reference_uri: https://www.ssb.no/a/metadata/conceptvariable/vardok/1919/nb
         comment:
@@ -2288,7 +2324,7 @@ components:
         subject_fields:
         - he04
         contains_special_categories_of_personal_data: false
-        measurement_type: null
+        measurement_type: "01"
         valid_until: 2026-01-01
         external_reference_uri: https://www.ssb.no/a/metadata/conceptvariable/vardok/1919/nb
         comment:
@@ -2394,7 +2430,7 @@ components:
         subject_fields:
         - he04
         contains_special_categories_of_personal_data: false
-        measurement_type: null
+        measurement_type: "01"
         valid_from: 2026-01-02
         external_reference_uri: https://www.ssb.no/a/metadata/conceptvariable/vardok/1919/nb
         comment:
@@ -2613,7 +2649,10 @@ components:
           title: Innvandrere
         contains_special_categories_of_personal_data: true
         variable_status: PUBLISHED_INTERNAL
-        measurement_type: null
+        measurement_type:
+          reference_uri: https://www.ssb.no/klass/klassifikasjoner/303
+          code: "01"
+          title: Andel
         valid_from: 2003-01-01
         valid_until: null
         external_reference_uri: https://www.ssb.no/a/metadata/conceptvariable/vardok/1919/nb
@@ -2769,7 +2808,7 @@ components:
         subject_fields:
         - he04
         contains_special_categories_of_personal_data: true
-        measurement_type: null
+        measurement_type: "01"
         valid_from: 2003-01-01
         external_reference_uri: https://www.ssb.no/a/metadata/conceptvariable/vardok/1919/nb
         comment:
