# src/main/kotlin/no/ssb/metadata/vardef/controllers/internalapi/VarDokMigrationController.kt
@@ -21,6 +21,7 @@ import io.swagger.v3.oas.annotations.tags.Tag
 import kotlinx.coroutines.reactive.awaitFirst
 import kotlinx.coroutines.runBlocking
 import no.ssb.metadata.vardef.annotations.BadRequestApiResponse
+import no.ssb.metadata.vardef.annotations.NotFoundApiResponse
 import no.ssb.metadata.vardef.constants.*
 import no.ssb.metadata.vardef.integrations.vardok.models.VardefInput
 import no.ssb.metadata.vardef.integrations.vardok.models.VardokIdResponse
@@ -139,6 +140,7 @@ class VarDokMigrationController(
      * Get one variable definition by vardok id or get the vardok id by vardef id.
      */
     @Get("/{id}")
+    @NotFoundApiResponse
     @ApiResponse(
         content =
             [
@@ -165,7 +167,15 @@ class VarDokMigrationController(
             examples = [
                 ExampleObject(
                     name = "Vardok id",
-                    value = "1607",
+                    value = VARDOK_ID_RESPONSE_EXAMPLE,
+                ),
+                ExampleObject(
+                    name = "Vardef id",
+                    value = VARDEF_ID_MIGRATED_EXAMPLE,
+                ),
+                ExampleObject(
+                    name = NOT_FOUND_EXAMPLE_NAME,
+                    value = VARDEF_ID_NOT_MIGRATED_EXAMPLE,
                 ),
             ],
         )
@@ -189,7 +199,10 @@ class VarDokMigrationController(
             vardokService
                 .getVardokIdByVardefId(id)
                 ?.let { HttpResponse.ok(VardokIdResponse(it)) }
-                ?: HttpResponse.notFound(HttpStatus.NOT_FOUND)
+                ?: throw HttpStatusException(
+                    HttpStatus.NOT_FOUND,
+                    "No vardok mapping for vardef id $id",
+                )
         }
 
     /**
